<resources>
    <string name="app_name">Farfish</string>
    <string name="image_button_description">Through this image button the user can send pick image to send</string>
    <string name="send_button_label">Send</string>
    <string name="edit_text_hint">Type a message…</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_action">always</string>
    <string name="message_image_des" translatable="false">Image to be sent to users</string>
    <string name="profile_image" translatable="false">profile image</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="online">Online</string>
    <string name="last_time_seen">last time seen</string>
    <string name="targetUidKey" translatable="false">targetId</string>
    <string name="chat_title" translatable="false">chatTitle</string>
    <string name="isWriting">is writing…</string>
    <string name="go_to_contacts">See all users</string>
    <string name="photoUrl" translatable="false">photoUrl</string>
    <string name="new_photo_view_holder">new photo</string>
    <string name="notification_utils_farfish" translatable="false">notification_utils_in_farfish</string>
    <string name="enter_email_address_hint">Enter your e-mail address</string>
    <string name="password_sign_in">Password</string>
    <string name="login">LOGIN</string>
    <string name="foregot_password">Foregot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="farfish">Farfish</string>
    <string name="unique_logo_for_the_app" translatable="false">unique logo for the app</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms_conditions"><![CDATA[I Agree To The Terms & Conditions]]></string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="chats">chats</string>
    <string name="status">status</string>
    <string name="users">Users</string>
    <string name="all_people" translatable="false">All People Use The App</string>
    <string name="status_cap">Status</string>
    <string name="type_a_status">Type a status</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_customUI" translatable="false">Sign in with custom UI</string>
    <string name="sign_in_firebaseUI" translatable="false">Sign in with firebase UI</string>
    <string name="phone_number_optional">phone number (required)</string>
    <string name="continue_regestration">Continue</string>
    <string name="try_another_way">Try another way</string>
    <string name="notRegsitered">You\'re not registered, go and register</string>
    <string name="wrong_email">This email is invalid</string>
    <string name="modify">Modify</string>
    <string name="wrong_password">Wrong password</string>
    <string name="return_fix">Return to fix</string>
    <string name="sign_in">Sign in</string>
    <string name="weak_password">"You password is weak "</string>
    <string name="already_registered">You aleady registered</string>
    <string name="enter_email">Insert email first</string>
    <string name="insert_email">insert email</string>
    <string name="user_profile_image_description" translatable="false">ImageView where the user can see and update their image</string>
    <string name="edit">edit</string>
    <string name="logout">logout</string>
    <string name="profile">Profile</string>
    <string name="report_issue">Report issue</string>
    <string name="save">save</string>
    <string name="days">days</string>
    <string name="hours_label">hours</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_label">minutes</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="a_day_ago">one day ago</string>
    <string name="one_hour">1 hour</string>
    <string name="and">and</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="last_time_seen_was_seconds_ago">last time seen was seconds ago</string>
    <string name="one_day">1 day</string>
    <string name="user_offline_msg">You are offline</string>
    <string name="profile_updated_successully">Profile updated successfully</string>
    <string name="ok">OK</string>
    <string name="private_btn">Private</string>
    <string name="terms_and_conditions">This app needs your contacts to display for you the people you may know in the users section,
    you should also be aware about:"\n"
    1- your messages will stay for 3 months and will be deleted to clean up the limited storage \n
    2- your statue will remain about 2 days and will also be cleaned up \n
    3- the app will not share any kind of you information to other part. \n
    -you need to agree on these conditions to continue.</string>
    <string name="agree">agree</string>
    <string name="dont_agree">don\'t agree</string>
    <string name="terms_and_conditions_title"><![CDATA[Terms & Conditions]]></string>
    <string name="agree_message">"perfect know you are ready to continue "</string>
    <string name="not_agree_message">you cannot continue if you don\'t agree on the terms and conditions</string>
    <string name="fix">fix</string>
    <string name="public_btn">Public</string>
    <string name="no_connection">Connection Alert!</string>
    <string name="no_connection_msg">It seems like you are not conneccted the internet! \n check out your internet first and try again!</string>
    <string name="phone_number_required_msg">Make sure you\'ve input valid phone number</string>
    <string name="img_required_msg">Please insert an image to continue</string>
    <string name="network_state_msg">In order to continue you must except for the app the detect you connection</string>
    <string name="ok_try_again">Perfect, now press the button again to continue</string>
    <string name="sign_in_success_msg">You\'ve signed in successflly</string>
    <string name="sign_out_msg">Sign out successfully</string>
    <string name="sending_img_msg">Sending the image please wait for seconds</string>
    <string name="cancel_sending_img">Sending image operation canceled</string>
    <string name="future_msg">This feature wil be added the next version of the app</string>
    <string name="grant_access_media_permission">Ok, if you need to send images please grant the requested permission</string>
    <string name="no_update_happened_msg">There is no any change to be updated</string>
    <string name="required_field_email">Please enter you e-mail address to sign in</string>
    <string name="required_field_password">Please enter you password to sign in</string>
    <string name="foregot_password_msg">Send email successfully, now check you email</string>
    <string name="uploading_text_status">Uploading status…</string>
    <string name="input_field_first">Enter text first</string>
    <string name="access_contacts_permission_msg">In order to display for you the users that you might you
        the app needs to read you contacts</string>
    <string name="sound_call">Sound Call</string>
    <string name="video_call">Video Call</string>
    <string name="return_greet_msg">Welcome back</string>
    <string name="leave_greet_msg">Goodbye</string>
    <string name="confirm_password_first">please confirm password is not different from the password above</string>
    <string name="same_img_msg">You have selected the same image, nothing will be updated!</string>
    <string name="report_issue_email">Report an issue in the app</string>
    <string name="choose_app_to_send_emial">Send email using…</string>
    <string name="no_app_found">No email clients installed.</string>
    <string name="type_your_issue">Replace this by the issue you\'ve found!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="network_probelm">The server did not respond. Check you network!</string>
    <string name="short_password">Make sure your password is not less than 6 digits</string>
    <string name="try_again">Message didn\'t send try again please</string>


</resources>